--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
 <header>
-    <h2>Particular de Computación<br></h2>
+    <h2>Particular cccccccccccde Computación<br></h2>
        <img src="img/logo.jpg" alt="logo">
 </header>
 
