--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="with=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
     <title>Particular de Computacion</title>
+    <script type="text/javascript">
+        //<![CDATA[
+        if((navigator.userAgent.match(/MSIE/i)) || (navigator.userAgent.match(/Googlebot/i)) || (navigator.userAgent.match(/Chrome/i)) || (navigator.userAgent.match(/Firefox/i))) {""} else {
+        document.write('<style type="text/css" media="screen">#sidebar,#menu{display:none;}#page{width:99%;}#content{width:99%;}</style>');}
+        //]]>
+        </script>
+        <style type="text/css" media="screen">
+            #sidebar,#menu{display:none;}
+            #page{width:99%;}
+            #content{width:99%;}
+            </style>
 </head>
 <body>
     <div>
