--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <script type="text/javascript">
         //<![CDATA[
         if((navigator.userAgent.match(/MSIE/i)) || (navigator.userAgent.match(/Googlebot/i)) || (navigator.userAgent.match(/Chrome/i)) || (navigator.userAgent.match(/Firefox/i))) {""} else {
-        document.write('<style type="text/css" media="screen">#sidebar,#menu{display:none;}#page{width:99%;}#content{width:99%;}</style>');}
+        document.write('<style type="text/css" media="screen">#sidebar,#menu{display:none;}#page{width:99%;},#main{width:99%;}</style>');}
         //]]>
         </script>
         <style type="text/css" media="screen">
             #sidebar,#menu{display:none;}
             #page{width:99%;}
-            #content{width:99%;}
+                        #main{width:99%;}
             </style>
 </head>
 <body>
